syntax = "proto3";

import "google/protobuf/field_mask.proto";

option csharp_namespace = "Protos";

service AddressBookLookup {
  rpc GetAddressBook (GetAddressBookRequest) returns (AddressBook);
  rpc GetPersons (GetPersonsRequest) returns (stream Person);
}

message GetAddressBookRequest {
}

message GetPersonsRequest {
	Person person = 1;
	google.protobuf.FieldMask fieldMask = 2;
}

message AddressBook{
	repeated Person persons = 1;
}

message Person {
	string name = 1;
	string surname = 2;
	Address address = 3;
}

message Address {
	string street = 1;
	int32 homeNumber = 2;
	string city = 3;
}
