syntax = "proto3";

option csharp_namespace = "Protos";

service PersonLookup {
  rpc GetAddressBook (AddressBookRequest) returns (AddressBook);
  rpc FindPersons (SearchedPerson) returns (stream Person);
}

message AddressBookRequest {
}

message AddressBook{
	repeated Person persons = 1;
}

message SearchedPerson {
	string name = 1;
	string surname = 2;
}

message Person {
	string name = 1;
	string surname = 2;
	Address address = 3;
}

message Address {
	string street = 1;
	int32 homeNumber = 2;
	string city = 3;
}